data/derived/sp14/progs/unify/prog0838.ml.out
Characters 83-84:
  | h::t -> clone h::x (n-1);;
                  ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
